objects/PSS_Incentive_Credit__c.object
<CustomObject>
    <fields>
        <fullName>ATL_Date__c</fullName>
        <label>ATL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Historical_Linker__c</fullName>
        <formula>Account__r.Historical_Linker__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Historical Linker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PSS Incentive Credits</relationshipLabel>
        <relationshipName>PSS_Incentive_Credits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Binder_Date__c</fullName>
        <label>Binder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Counter_Id__c</fullName>
        <formula>Contract__r.Counter_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Counter Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Historical_Linker_Id__c</fullName>
        <formula>Contract__r.Historical_Linker__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Historical Linker Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract__c</referenceTo>
        <relationshipLabel>PSS Incentive Credits</relationshipLabel>
        <relationshipName>PSS_Incentive_Credits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Split__c</fullName>
        <label>Credit Split</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NA_Date__c</fullName>
        <label>NA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Business_Vertical__c</fullName>
        <formula>TEXT(Program__r.New_Business_Vertical__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Business Vertical</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Historical_Linker_ID__c</fullName>
        <formula>Opportunity__r.Historical_Linker__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Historical Linker ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>PSS Incentive Credits</relationshipLabel>
        <relationshipName>PSS_Incentive_Credits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSS_Credit__c</fullName>
        <label>PSS Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Program_Abbreviation__c</fullName>
        <formula>Program__r.Program_Abbreviation__c</formula>
        <label>Program Abbreviation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Code__c</fullName>
        <formula>Program__r.Program_Acronym__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>PSS Incentive Credits</relationshipLabel>
        <relationshipName>PSS_Incentive_Credits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_Group__c</fullName>
        <formula>&quot;Sample Rev Group&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SA_EA_Date__c</fullName>
        <label>SA/EA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>PSS Incentive Credit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PSS Incentive Credits</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>